# carmot

./: CMakeLists.txt  README  clean.sh  compile.sh  compile_disable_dfa_onlyread.sh  compile_disable_dfa_onlyread_directstate.sh  compile_disable_directstate.sh  compile_disable_onlyread_directstate.sh  compile_disable_pin_dfa_onlyread.sh  compile_disable_pin_dfa_onlyread_directstate.sh  globalCompile.sh  globalCompile_disable_O3_dfa_onlyread.sh  globalCompile_disable_O3_dfa_onlyread_directstate.sh  globalCompile_disable_clustercallstack_O3_dfa_onlyread.sh  globalCompile_disable_dfa_onlyread.sh  globalCompile_disable_dfa_onlyread_directstate.sh  globalCompile_disable_directstate.sh  globalCompile_disable_onlyread_directstate.sh  globalCompile_disable_pin_clustercallstack_O3_dfa_onlyread.sh  globalCompile_disable_pin_clustercallstack_O3_dfa_onlyread_directstate.sh  recompile.sh  setup.sh  setup_env.sh  virtualEnv.sh
extra/pin/3.13/: enable
extra/pin/3.13/release/: bin  lib  lib-ext  runtime
extra/texas/: README.md  json
extra/texas/src/runtime/: Allocation.cpp  Allocation.hpp  AllocationTable.cpp  AllocationTable.hpp  ENV  HelperFunctions.cpp  HelperFunctions.hpp  (+17 more)
extra/texas/test/: optMerger.py
include/: Makefile  backtrace_asm.S  compile.sh  compile_disable_clustercallstack.sh  compile_with.sh  inject.cpp  inject.hpp  pin_interface.cpp  pin_interface.hpp  setup.sh  utils.cpp  utils.hpp  wrapper.cpp  wrapper.hpp
memorytool_patch/: mem2reg_disable.sh  mem2reg_enable.sh  memorytool-mem2regenabled
noelle_patch/: installNOELLE.sh  noelle-norm-nomem2reg
pin_patch/: memorytool-run-pindisabled  memorytool-run-pinenabled  pin_disable.sh  pin_enable.sh
src/: AvoidLocalVariableInstrumentation.cpp  BaseAddressMostlyInvariant.cpp  CMakeLists.txt  CatPass.cpp  ClusterCallstackInstrumentation.cpp  DirectState.cpp  Induction.cpp  InstrumentLoopInvariantStoreAddressOnce.cpp  Invariant.cpp  LoadStoreInstrumentation.cpp  MostlyInvariant.cpp  OnlyRead.cpp  ROI.cpp  ROIManager.cpp  StoreLoopInstrumentation.cpp  TouchSameObject.cpp  Utils.cpp  srcCloneFunc
src/include/: AvoidLocalVariableInstrumentation.hpp  BaseAddressMostlyInvariant.hpp  CatPass.hpp  ClusterCallstackInstrumentation.hpp  DebugData.hpp  DirectState.hpp  Induction.hpp  InstrumentLoopInvariantStoreAddressOnce.hpp  Invariant.hpp  LoadStoreInstrumentation.hpp  MostlyInvariant.hpp  OnlyRead.hpp  ROI.hpp  ROIManager.hpp  StoreLoopInstrumentation.hpp  TouchSameObject.hpp  Utils.hpp
tests/regression/: Makefile
tests/regression/calloc/: test.cpp
tests/regression/complex/: test.cpp
tests/regression/cycles/: test.cpp
tests/regression/cycles2/: test.cpp
tests/regression/cycles3/: test.cpp
tests/regression/delete/: test.cpp
tests/regression/free/: test.cpp
tests/regression/global/: test.cpp
tests/regression/global_simple/: test.cpp
tests/regression/library2/: Makefile  library.cpp  library.hpp  test.cpp
tests/regression/loop_with_induction_variable_store/: test.cpp  val.out
tests/regression/loop_with_stores/: test.cpp
tests/regression/malloc/: test.cpp
tests/regression/matMult/: test.cpp
tests/regression/memoryBlowupAllocations/: test.cpp
tests/regression/mmap/: test.cpp
tests/regression/new/: test.cpp
tests/regression/new_with_constructor/: test.cpp
tests/regression/realloc/: test.cpp
tests/regression/realloc_simple/: test.cpp
tests/regression/rois/: test.cpp
tests/regression/scripts/: Makefile  clean_tests.sh  oracle_output.sh  run_test.sh  run_tests.sh
tests/regression/sets/: test.cpp
tests/regression/staticArray/: test.cpp
tests/regression/transfer_state/: test.cpp
utils/: generateCondorScript.py  memory-checker  memorytool  memorytool-accelerator  memorytool-all  memorytool-criticalsection  memorytool-referencecycles  memorytool-run  memorytool-stateprivatization  memorytool-statesizes  memorytool-stats  memorytool-weakptrreferencecycles  objcopy.sh
utils/MemTrace/: empty_memtrace.cpp  makefile  makefile.rules  memtrace.cpp  pin_interface.cpp  pin_interface.hpp
utils/check_for_induction_variables/: CMakeLists.txt  clean.sh  compile_disable.sh  run.sh
utils/check_for_induction_variables/src/: CMakeLists.txt  CatPass.cpp  CheckForInductionVariables.cpp  srcCloneFunc  srcPromoteAllocas
utils/clone_function_roi/: CMakeLists.txt  compile_disable.sh
utils/clone_function_roi/src/: CMakeLists.txt  CatPass.cpp  CloneFunction.cpp  MetadataInstruction.cpp  TagROIs.cpp
utils/mangle_demangle/: CMakeLists.txt  compile.sh  run.sh
utils/mangle_demangle/src/: CMakeLists.txt  CatPass.cpp
utils/noelle_profiler/: CMakeLists.txt  run.sh
utils/noelle_profiler/src/: CMakeLists.txt  CatPass.cpp
utils/prettyPrint/: Makefile  get-accelerator.cpp  get-criticalsection.cpp  get-parallelfor  get-parallelfor.cpp  get-referencecycles.cpp  get-stateprivatization.cpp  get-ward.cpp  help.cpp  help.hpp  prettyPrint.cpp
utils/promote_cloned_function_allocas/: CMakeLists.txt  compile_disable.sh
utils/promote_cloned_function_allocas/src/: CMakeLists.txt  CatPass.cpp  PromoteAllocaToReg.cpp
utils/remove_optnone/: CMakeLists.txt  run.sh
utils/remove_optnone/src/: CMakeLists.txt  CatPass.cpp
utils/tag_functions_with_opt_none/: CMakeLists.txt  compile_disable_O3.sh  run.sh
utils/tag_functions_with_opt_none/src/: AvoidLocalVariableInstrumentation.cpp  CMakeLists.txt  CatPass.cpp
(+56 files in other folders)
